<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:titleCondensed="@string/menu_add" 
		android:title="@string/menu_add_long"
		android:id="@+id/menu_add" 
		android:icon="@android:drawable/ic_menu_add" />
	<item android:title="@string/menu_go_to_label"
		android:id="@+id/menu_go_to" 
		android:icon='@drawable/ic_menu_goto' />
	<item android:titleCondensed="@string/menu_search" 
		android:title="@string/menu_search_long"
		android:id="@+id/menu_search" 
		android:icon='@android:drawable/ic_menu_search' />
	<item android:titleCondensed="@string/menu_sort_label" 
		android:title="@string/menu_sort_label_long"
		android:id="@+id/menu_sort_alpha" 
		android:icon='@android:drawable/ic_menu_sort_alphabetically' />
	<item android:titleCondensed="@string/menu_sort_count" 
		android:title="@string/menu_sort_count_long"
		android:id="@+id/menu_sort_count" 
		android:icon='@android:drawable/ic_menu_sort_by_size' />
	<item android:titleCondensed="@string/menu_sync" 
		android:title="@string/menu_sync_long"
		android:id="@+id/menu_sync" 
		android:icon='@drawable/ic_menu_refresh' />
	<item android:title="@string/menu_settings"
		android:id="@+id/menu_settings" 
		android:icon="@android:drawable/ic_menu_preferences" />
	<item android:title="@string/menu_login"
		android:id="@+id/menu_login" 
		android:visible='false'/>
	<item android:title="@string/menu_logout"
		android:id="@+id/menu_logout"
		android:visible='false' />
</menu>
