<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:titleCondensed="@string/menu_add"
		android:title="@string/menu_add_long"
		android:id="@+id/menu_add" 
		android:icon="@android:drawable/ic_menu_add" />
	<item android:titleCondensed="@string/menu_search" 
		android:title="@string/menu_search_long"
		android:id="@+id/menu_search" 
		android:icon='@android:drawable/ic_menu_search' />
	<item android:titleCondensed="@string/menu_sort_title" 
		android:title="@string/menu_sort_title_long"
		android:id="@+id/menu_sort_title" 
		android:icon='@android:drawable/ic_menu_sort_alphabetically' />
	<item android:titleCondensed="@string/menu_sort_date" 
		android:title="@string/menu_sort_date_long"
		android:id="@+id/menu_sort_date" 
		android:icon='@android:drawable/ic_menu_sort_by_size' />
	<item android:titleCondensed="@string/menu_sync" 
		android:title="@string/menu_sync_long"
		android:id="@+id/menu_sync" 
		android:icon='@drawable/ic_menu_refresh' />
</menu>
